--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,7 +20,7 @@ body {
   .about {
     display: grid;
     width: 100%;
-    height: 100vh;
+    height: 98vh;
     background: -webkit-gradient(linear, left top, left bottom, from(#33ccff), to(#db0033));
     background: -webkit-linear-gradient(top, #33ccff 0%, #db0033 100%);
     background: -o-linear-gradient(top, #33ccff 0%, #db0033 100%);
@@ -35,7 +35,7 @@ body {
       align-items: center;
       grid-template: 1fr 0.5fr repeat(5, 1fr)/repeat(6, 1fr);
       width: 94%;
-      height: 96vh;
+      height: 100%;
       margin: 2vh auto; }
       .about__container__title {
         grid-column: 3/5;
@@ -48,7 +48,7 @@ body {
         left: 0.13em;
         font-size: 5.8em;
         letter-spacing: 0.02em;
-        font-family: "Righteous","Zapf Chancery", cursive;
+        font-family: "Righteous", "Zapf Chancery", cursive;
         color: #ddd4;
         text-shadow: -3px 1px 50px #ddd3; }
         .about__container__title h2:nth-child(1) {
@@ -85,7 +85,7 @@ body {
           background-color: #7b080833;
           text-align: center;
           color: #21016b;
-          font-family: "Cabin",Gill Sans, sans-serif;
+          font-family: "Cabin", Gill Sans, sans-serif;
           -webkit-box-shadow: -2px 4px 5px #210031;
           box-shadow: -2px 4px 5px #210031;
           text-shadow: 0px 1px 1px #b19494ab;
@@ -173,7 +173,7 @@ body {
       height: 100%;
       width: 100%;
       background-color: #db0033ed;
-      font-family: "Play",Helvetica, sans-serif;
+      font-family: "Play", Helvetica, sans-serif;
       font-size: 1.2em;
       color: #fff;
       -webkit-transition: left 100ms cubic-bezier(0.16, 0.18, 0.86, 0.85);
@@ -348,7 +348,7 @@ body {
       color: #d4c0de;
       text-align: center;
       font-size: 1.5rem;
-      font-family: "Righteous","Zapf Chancery", cursive;
+      font-family: "Righteous", "Zapf Chancery", cursive;
       text-shadow: 0px 2px 5px #291122; }
   @media (min-width: 1440px) {
     .about__container__title {
@@ -598,7 +598,7 @@ body {
     .portfolio__card__project__title {
       font-size: 1.3em; }
     .portfolio__card__project__description {
-      font-size: 0.95em;
+      font-size: 0.85em;
       margin-top: 0; }
     .portfolio__card__project__stack {
       width: 100%;
@@ -672,8 +672,10 @@ body {
       width: 6%;
       right: 94%; } }
   @media (max-width: 460px) and (min-height: 650px) {
-    .about__container__description__text {
-      font-size: 1.25em; } }
+    .about__container {
+      height: 91%; }
+      .about__container__description__text {
+        font-size: 1.25em; } }
   @media (max-width: 460px) and (max-height: 650px) {
     .about__container__title {
       font-size: 2.5em; }
@@ -687,7 +689,7 @@ body {
     .portfolio__card__project__title {
       font-size: 1.25em; }
     .portfolio__card__project__description {
-      font-size: 0.9em; }
+      font-size: 0.8em; }
     .portfolio__card > :nth-child(1) .portfolio__card__project__title {
       grid-column: 2/6;
       grid-row: 2/3; } }
@@ -710,7 +712,7 @@ body {
     .portfolio__card__project__title {
       font-size: 1.1em; }
     .portfolio__card__project__description {
-      font-size: 0.7em; } }
+      font-size: 0.64em; } }
   @media (max-width: 330px) and (max-height: 540px) {
     .about__container__description__text {
       font-size: 0.9em; } }
