--- a/css/main.css
+++ b/css/main.css
@@ -2,15 +2,14 @@
 html,
 body {
   height: 100%;
-  overflow: hidden;
-  scroll-behavior: auto; }
+  overflow: hidden; }
 
 * {
   padding: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  scroll-behavior: auto; }
+  scroll-behavior: smooth; }
 
 .container {
   background-color: #f9f4f8;
@@ -21,7 +20,7 @@ body {
   .about {
     display: grid;
     width: 100%;
-    height: 100vh;
+    height: 98vh;
     background: -webkit-gradient(linear, left top, left bottom, from(#33ccff), to(#db0033));
     background: -webkit-linear-gradient(top, #33ccff 0%, #db0033 100%);
     background: -o-linear-gradient(top, #33ccff 0%, #db0033 100%);
@@ -36,7 +35,7 @@ body {
       align-items: center;
       grid-template: 1fr 0.5fr repeat(5, 1fr)/repeat(6, 1fr);
       width: 94%;
-      height: 96vh;
+      height: 100%;
       margin: 2vh auto; }
       .about__container__title {
         grid-column: 3/5;
@@ -673,8 +672,10 @@ body {
       width: 6%;
       right: 94%; } }
   @media (max-width: 460px) and (min-height: 650px) {
-    .about__container__description__text {
-      font-size: 1.25em; } }
+    .about__container {
+      height: 91%; }
+      .about__container__description__text {
+        font-size: 1.25em; } }
   @media (max-width: 460px) and (max-height: 650px) {
     .about__container__title {
       font-size: 2.5em; }
