--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1113,6 +1113,7 @@ body {
     }
     @media (max-height: 650px) {
       .about__container {
+        height: 85%;
         &__title {
           font-size: 2.5em;
         }
