--- a/src/css/main.css
+++ b/src/css/main.css
@@ -677,10 +677,12 @@ body {
       .about__container__description__text {
         font-size: 1.25em; } }
   @media (max-width: 460px) and (max-height: 650px) {
-    .about__container__title {
-      font-size: 2.5em; }
-    .about__container__description__text {
-      font-size: 1.2em; } }
+    .about__container {
+      height: 85%; }
+      .about__container__title {
+        font-size: 2.5em; }
+      .about__container__description__text {
+        font-size: 1.2em; } }
   @media (max-width: 380px) {
     .about__container__title {
       font-size: 2.2em; }
