--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,8 @@
 html,
 body {
   height: 100%;
-  overflow: hidden; }
+  overflow: hidden;
+  overscroll-behavior-y: auto; }
 
 * {
   padding: 0;
@@ -678,7 +679,7 @@ body {
         font-size: 1.25em; } }
   @media (max-width: 460px) and (max-height: 650px) {
     .about__container {
-      height: 80%; }
+      height: 85%; }
       .about__container__title {
         font-size: 2.5em; }
       .about__container__description__text {
