fixed enlarged about page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@ html,
 body {
   height: 100%;
   overflow: hidden;
+  overscroll-behavior-y: auto;
 }
 
 * {
@@ -49,7 +50,7 @@ body {
       align-items: center;
       grid-template: 1fr 0.5fr repeat(5, 1fr) / repeat(6, 1fr);
       width: 94%;
-      height: 100%;
+      height: 95vh;
       margin: 2vh auto;
 
       &__title {
@@ -1113,7 +1114,7 @@ body {
     }
     @media (max-height: 650px) {
       .about__container {
-        height: 85%;
+        height: 89%;
         &__title {
           font-size: 2.5em;
         }
