--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,7 +2,8 @@
 html,
 body {
   height: 100%;
-  overflow: hidden; }
+  overflow: hidden;
+  overscroll-behavior-y: auto; }
 
 * {
   padding: 0;
@@ -35,7 +36,7 @@ body {
       align-items: center;
       grid-template: 1fr 0.5fr repeat(5, 1fr)/repeat(6, 1fr);
       width: 94%;
-      height: 100%;
+      height: 95vh;
       margin: 2vh auto; }
       .about__container__title {
         grid-column: 3/5;
@@ -678,7 +679,7 @@ body {
         font-size: 1.25em; } }
   @media (max-width: 460px) and (max-height: 650px) {
     .about__container {
-      height: 85%; }
+      height: 89%; }
       .about__container__title {
         font-size: 2.5em; }
       .about__container__description__text {
