--- a/css/main.css
+++ b/css/main.css
@@ -10,12 +10,14 @@ body {
   margin: 0;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+  overscroll-behavior-y: auto; }
 
 .container {
   background-color: #f9f4f8;
   overflow-x: hidden;
-  height: 100%; }
+  height: 100%;
+  overscroll-behavior-y: auto; }
 
 @supports (display: grid) {
   .about {
